Restructure package hierarchy and update visibility
Moved several classes into more specific packages to improve organization and readability. Updated access modifiers for certain fields and methods to ensure proper encapsulation. Additionally, adjusted test cases and import paths to reflect these changes.